--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
       <p class= "button2">Login</p>
   
   </div>
+  
+  <div class="bottom">
+    <div class="link">
+    <!--<a href="url">Privacy Policy</a>-->
+    <!--<a href="url">Terms of Service</a>-->
+    <p>Privacy Policy  &nbsp;&nbsp; Terms of Service</p>
+    </div>
+    <p class = "bottom-text">Copyright © 2019 DeltaMath.com. All Rights Reserved.</p>
+   
+  </div>
   </body>
   
   
